New Student Bio

--- a/Student_Bio.HTML
+++ b/Student_Bio.HTML
@@ -2,7 +2,31 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Student Bio</title>
+        <title>Portfolio</title>
+        <style>
+            #orangebig {
+                color: orange;
+                font-size: 38px;
+            }
+            body {
+                font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+            }
+
+        .blueWhite{
+            background-color: blue;
+            color: antiquewhite;
+            padding: 35px;
+        }
+        p {
+            font-size: 20px;
+        }
+        ul {
+            color: yellowgreen;
+        }
+        ul a {
+            color: purple;
+        }
+        </style>
     </head>
     <body>
         <h1>Student Bio</h1>
@@ -10,10 +34,12 @@
         <br>
         <img src="C:\Users\Yo\Pictures\Camera Roll\phoenix.jpg"width=200, height=200>
         <br>
-        <p>I am a ginger</p>
+        <p class=blueWhite> I am a ginger</p>
+        <p>You got a problem?</p>
+        <p class=blueWhite> Get over it</p>
         <h3>Contact Info</h3>
         <ul>
-            <li><strong>Email: </strong><a href="#">Paulpbkr22@gmail.com</a></li>
+            <li id="orangebig"> <strong>Email: </strong><a href="#">Paulpbkr22@gmail.com</a></li>
             <li><strong>Github: </strong><a href="https://github.com">Paul Baker</a></li>
             <li><strong>Porfolio: </strong><a href="#">Coming Soon</a></li>
         </ul>
